[package]
name = "sprite"
version = "0.2.5-alpha.0"
edition = "2018"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/sprite-gen"

readme = "README.md"
description = "Procedurally generate pixel sprites and save them in different formats"

repository = "https://github.com/tversteeg/sprite-gen.git"
keywords = ["gamedev", "sprite", "procedural", "procgen"]
categories = ["games", "rendering", "game-engines"]

[badges]
travis-ci = {repository = "tversteeg/sprite-gen"}

[workspace]

[dependencies]
anyhow = "1.0.27"
druid = { git = "https://github.com/xi-editor/druid.git", version = "0.5" }
sprite-gen = { path = "lib", version = "0.1.5" }
lazy_static = "1.4.0"
bincode = "1.2.1"
serde = { version = "1.0.105", features = ["derive"] }
itertools = "0.9.0"

[[example]]
name = "minifb"
path = "examples/minifb.rs"

[dev-dependencies]
sprite-gen = { path = "lib", version = "0.1.5" }
blit = "0.5.12"
minifb = "0.15.3"
