[package]
name = "sprite"
version = "0.2.5"
edition = "2018"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/sprite-gen"

readme = "README.md"
description = "Procedurally generate pixel sprites and save them in different formats"

repository = "https://github.com/tversteeg/sprite-gen.git"
keywords = ["gamedev", "sprite", "procedural", "procgen"]
categories = ["games", "rendering", "game-engines"]

[badges]
travis-ci = {repository = "tversteeg/sprite-gen"}

[workspace]

[dependencies]
anyhow = "1.0.31"
bincode = "1.2.1"
druid = "0.6.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
rand = "0.7.3"
serde = { version = "1.0.111", features = ["derive"] }
sprite-gen = { path = "lib", version = "0.2.0" }

[[example]]
name = "minifb"
path = "examples/minifb.rs"

[dev-dependencies]
sprite-gen = { path = "lib", version = "0.2.0" }
blit = "0.5.12"
minifb = "0.17.0"
