[package]
name = "sprite"
version = "0.2.5"
edition = "2021"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/sprite-gen"

readme = "README.md"
description = "Procedurally generate pixel sprites and save them in different formats"

repository = "https://github.com/tversteeg/sprite-gen.git"
keywords = ["gamedev", "sprite", "procedural", "procgen"]
categories = ["games", "rendering", "game-engines"]

[workspace]
members = ["run-wasm", "lib"]

[features]
default = ["embed-assets"]
embed-assets = []

[dependencies]
winit = "0.28"
log = "0.4"
pixels = "0.13"
blit = "0.8.3"
game-loop = { version = "1.0", features = ["winit"] }
miette = { version = "5", features = ["fancy"] }
image = { version = "0.24", default-features = false, features = ["png"] }
rotsprite = "0.1"
vek = "0.16"
assets_manager = { version = "0.10", features = ["embedded", "hot-reloading", "toml", "png"], default-features = false }
serde = "1"
sprite-gen = { path = "lib" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "sync", "rt-multi-thread"] }
fastrand = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "Window"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = { version = "1", features = ["wasm-bindgen", "color"] }
console_error_panic_hook = "0.1"
fastrand = { version = "2", default-features = false, features = ["js"] }
