[package]
name = "sprite-gen"
version = "0.1.4"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/sprite-gen"

readme = "../README.md"
description = "Procedurally generate pixel sprites library"
documentation = "https://docs.rs/sprite-gen"

repository = "https://github.com/tversteeg/sprite-gen.git"
keywords = ["gamedev", "sprite", "procedural", "procgen"]
categories = ["games", "rendering", "game-engines"]

[badges]
travis-ci = {repository = "tversteeg/sprite-gen"}

[dependencies]
rand = "0.7"
hsl = "0.1"
