[package]
name = "sprite-gen"
version = "0.2.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/sprite-gen"
edition = "2018"

readme = "../README.md"
description = "Procedurally generate pixel sprites library"
documentation = "https://docs.rs/sprite-gen"

repository = "https://github.com/tversteeg/sprite-gen.git"
keywords = ["gamedev", "sprite", "procedural", "procgen"]
categories = ["games", "rendering", "game-engines"]

[badges]
travis-ci = {repository = "tversteeg/sprite-gen"}

[dependencies]
hsl = "0.1.1"
randomize = "3.0.1"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "bench"
harness = false
